--- a/spec/support/fixtures/billing_service.yaml
+++ b/spec/support/fixtures/billing_service.yaml
@@ -1,8 +1,8 @@
 version: v0
 
-name: Test billing Service for testing
-key: test-billing-service
-description: Billing and accounting service for testing propouses
+name: Billing Service for testing
+key: billing-service
+description: Billing and accounting service
 languages:
   - ruby
   - js
@@ -29,7 +29,7 @@ environments:
     url: https://billing.company.com
     healthcheck_url: https://billing.company.com/health
     logs_url: https://elk.company.net/billing
-    error_traker_url: https://rollbar.com/company/billing
+    error_tracker_url: https://rollbar.com/company/billing
     tags:
       - test
       - specific gateway
@@ -41,7 +41,7 @@ environments:
     url: https://billing.stage-company.com
     healthcheck_url: https://billing.stage-company.com/health
     logs_url: https://elk.stage-company.net/billing
-    error_traker_url: https://rollbar.com/company/billing
+    error_tracker_url: https://rollbar.com/company/billing
     monitoring:
       grafana: https://grafana.stage-company.net/billing
 
